--- a/web/package.json
+++ b/web/package.json
@@ -44,7 +44,7 @@
     "d3-selection": "^3.0.0",
     "dayjs": "^1.11.8",
     "file-saver": "^2.0.5",
-    "http-proxy-middleware": "^2.0.6",
+    "http-proxy-middleware": "^3.0.3",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
@@ -119,5 +119,9 @@
   },
   "resolutions": {
     "@types/react": "18.0.28"
+  },
+  "overrides": {
+    "micromatch": "^4.0.8",
+    "body-parser": "^1.20.3"
   }
 }
