--- a/web/libs/graph/package.json
+++ b/web/libs/graph/package.json
@@ -42,5 +42,8 @@
     "react-router-dom": "^6.3.0",
     "typescript": "^5.1.3",
     "web-worker": "^1.2.0"
+  },
+  "overrides": {
+    "form-data": "^4.0.4"
   }
 }
